fix: drop-down footer v-align

--- a/assets/css/base/layout.css
+++ b/assets/css/base/layout.css
@@ -17,6 +17,10 @@
   *zoom: 1;
 }
 
+/* pull-left */
+.pull-left {
+  float: left;
+}
 /* pull-right */
 .pull-right {
   float: right;
