--- a/assets/css/components/buttons.css
+++ b/assets/css/components/buttons.css
@@ -1,8 +1,19 @@
 .btn {
-  min-height: 34px;
-  border: 1px solid #eee;
+  /* font and text */
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  /* box */
+  margin-left: 7px;
   padding: 6px 12px;
+  border: 1px solid #ccc;
   border-radius: 3px;
+  min-height: 34px;
+  /* background */
+  background-color: #fff;
+}
+
+.btn-default {
   color: #999;
 }
 
