--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -4,10 +4,6 @@
   padding-bottom: 24px;
 }
 
-.nav-btn-item {
-  margin-left: 7px;
-}
-
 .header {
   border-bottom: 1px solid#e6e6e6;
 }
